--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,58 @@
 version: '3.9'
+
 services:
+  selenium:
+    container_name: 'selenium_container'
+    image: seleniarm/standalone-chromium
+    privileged: true
+    hostname: chrome
+    restart: unless-stopped
+    shm_size: 2gb
+    environment:
+      - SE_NODE_MAX_SESSIONS=1
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+      - START_XVFB=false
+    ports:
+      - "4444:4444"
+    networks:
+      - selenium_nw
+
   app:
+    container_name: server_container
     build:
       context: ./server
       dockerfile: Dockerfile
+    restart: unless-stopped
+    networks:
+      - backend_nw
     volumes:
-      - ./server:/app/server
+      - ./server/:/app
     ports:
-      - 3000:3000
+      - "3000:3000"
 
   scrape:
+    container_name: scrape_container
     build: 
-      context: ./Scraper
+      context: ./scrape
       dockerfile: Dockerfile
+    restart: unless-stopped
+    depends_on:
+      - selenium
+    networks:
+      - selenium_nw
     volumes:
-      - ./Scraper:/scrape-app/Scraper
+      - ./scrape/:/scrape
     ports:
       - 8000:8000
     environment:
       - PYTHONUNBUFFERED=1
+      - REMOTE_SELENIUM_URL=http://selenium:4444
+
+networks:
+  backend_nw:
+    name: services_network
+    driver: bridge
+
+  selenium_nw:
+    name: selenium_network
+    driver: bridge
